# velora

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
admin/: eslint.config.js  index.html  package.json  tsconfig.app.json  (+2 more)
ai-worker/: .gitignore  README.md  pyproject.toml
ai-worker/src/: __init__.py  app.py  catvton_executor.py  config.py  executor.py  factory.py  main.py  models.py  storage.py
ai-worker/tests/: test_api.py  test_catvton_executor.py
ml/: AI_PROVIDER_FRAMEWORK.md  BENCHMARK_DATASET_PLAN.md  CATVTON_ENVIRONMENT.md  CATVTON_RESEARCH.md  CLOUD_GPU_EXPERIMENT_PLAN.md  COLAB_KAGGLE_NOTEBOOK_PLAN.md  EXPERIMENT_LOG.md  LOCAL_RUNNER_PLAN.md  MODEL_LICENSE_GATE.md  PYTHON_ENV.md  README.md  pyproject.toml
ml/config/: README.md  example.dataset.json  example.runner.json
ml/notebooks/: CATVTON_COLAB_TEMPLATE.md  VELORA_REMOTE_CATVTON_WORKER_COLAB.ipynb
ml/scripts/: __init__.py  verify_colab_worker_environment.py
ml/src/: __init__.py  main.py
ml/src/adapters/: __init__.py  base.py  catvton.py  dummy.py  models.py  registry.py
ml/src/benchmark/: __init__.py  batch.py  execution.py  models.py  output.py  report.py
ml/src/datasets/: __init__.py  manifest.py
ml/src/providers/: __init__.py  base.py  catvton_research.py  dummy.py  echo.py  models.py  registry.py
ml/src/runner/: __init__.py  config.py  devices.py  process.py
ml/tests/: test_adapters.py  test_benchmark_output.py  test_catvton_research.py  test_colab_worker_environment.py  test_devices.py  test_main_cli.py  test_process_runner.py  test_providers.py
(+281 files in other folders)
