[project]
name = "velora-ml"
version = "0.1.0"
description = "Isolated local AI research tooling for Velora."
requires-python = ">=3.11,<3.12"
dependencies = []

[dependency-groups]
dev = [
  "black",
  "mypy",
  "ruff",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
